--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "@axe-core/playwright": "^4.9.0",
-    "@playwright/test": "^1.46.1",
+    "@playwright/test": "^1.48.1",
     "@types/adm-zip": "^0.5.5",
     "@types/crypto-js": "^4.2.2",
+    "@types/node": "^22.7.7",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "adm-zip": "^0.5.12",
